--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <div class="login-container">
     <h2>Вход в систему</h2>
     <form id="login-form">
+        <label for="email">Email:</label>
         <input type="email" id="email" placeholder="Введите email" required>
         <input type="password" id="password" placeholder="Введите пароль" required>
+        <label for="password">Пароль:</label>
         <button type="submit">Войти</button>
     </form>
 
 </div>
-<script src="script.js"></script>
+
 </body>
 </html>
